@@ -1,3 +1,7 @@
+2005-07-13  Davyd Madeley  <davyd@madeley.id.au>
+
+	* drive-button.c: More extended media handling from Emmanuel Touzery.
+
 2005-07-01  Davyd Madeley  <davyd@madeley.id.au>
 
 	* drive-button.c: Intelligent options for media, taken from GVM.
